$Id$

2008-05-17  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* gdb.py: The 'help' command lists the pyclewn commands with the gdb
	commands only when used with no argument.
	* gdb.py: Remove tui commands.
	* application.py gdb.py gdbmi.py : Implementation of the 'project'
	command and of the project feature.
	* dispatcher.py gdb.py: New parameter of the 'gdb' option to set the
	project file pathname.
	* dispatcher.py netbeans.py test_simple.py: New option to set a limit
	on the console buffer size.
	* __init__.py dispatcher.py netbeans.py: Do not insert a '\n' before
	invoking netbeans 'remove' function.
	* application.py dispatcher.py: New option for the console window
	location.
	* netbeans.py: Use netbeans keyAtPos events to store the current
	cursor position.
	* application.py test_pyclewn.py test_simple.py: Enable a gdb command
	on the initial [No name] vim window.

===============================================================================
2008-04-09  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* gdb.py test_gdb.py: Prevent gdb from mistaking a pipe with a tty
	in gdb_batch().

===============================================================================
2008-03-22  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* application.py dispatcher.py netbeans.py gdb.py gdbmi.py:
	Implementation of the Gdb application and watched variables.

===============================================================================
2007-08-04  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* application.py dispatcher.py gdb.py netbeans.py simple.py:
	Implementation of the Simple application without watched variables.

2007-05-04  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* pyclewn development start